[package]
name = "secure_routing_stats"
version = "0.1.2"
authors = ["Tim Bruijnzeels <tim@nlnetlabs.nl>"]

[dependencies]
actix-web    = "^0.7"
clap         = "^2.23"
derive_more  = "^0.13"
intervaltree = "0.2.4"
futures      = "0.1"
serde        = { version = "^1.0", features = ["rc"] }
serde_derive = "^1.0"
serde_json   = "^1.0"